--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
         uses: azure/setup-kubectl@v3
         with:
           version: 'v1.30.10-eks-bc803b4' # Replace with your EKS cluster's Kubernetes version
+          architecture: 'x64' # or 'x86_64'
 
       - name: Decode kubeconfig
         run: echo "${{ secrets.KUBE_CONFIG_BASE64 }}" | base64 -d > kubeconfig
