--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,9 @@ jobs:
           aws-region: ap-south-1
 
       - name: Download kubectl
-        run: curl -LO "https://storage.googleapis.com/kubernetes-release/release/v1.30.10-eks-bc803b4/bin/linux/amd64/kubectl"
-             chmod +x kubectl
+        run: |curl -LO "https://github.com/kubernetes/kubernetes/releases/download/v1.30.10-eks-bc803b4/kubectl"
+        chmod +x kubectl
+
       - name: Test Network Connectivity
         run: ping google.com -c 4
 
