--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           aws-region: ap-south-1
 
       - name: Download kubectl
-        run: |curl -LO "https://github.com/kubernetes/kubernetes/releases/download/v1.30.10-eks-bc803b4/kubectl"
+        run: curl -LO "https://github.com/kubernetes/kubernetes/releases/download/v1.30.10-eks-bc803b4/kubectl"
         chmod +x kubectl
 
       - name: Test Network Connectivity
